--- a/templates/subject.html
+++ b/templates/subject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Subject</title>
-		<link rel = "stylesheet" type = "text/css" href = "/static/css/mainn.css">
+		<link rel = "stylesheet" type = "text/css" href = "/static/css/style.css">
 	</head>
 	<body>
 		{% for message in get_flashed_messages() %}
