--- a/templates/class.html
+++ b/templates/class.html
@@ -18,7 +18,7 @@
 			<p><br><br><br>To insert more class details:<br><br></p>
 			<form method = "post">
 				<div class = "TextBoxdiv">
-					<input type = "text" name = "name" placeholder = "Name in the format S1_AD">
+					<input type = "text" name = "name" placeholder = "Name in the format S1_AD" autocomplete="off">
 				</div>
 				<div>
 					<input type = "submit" value = "SUBMIT" class="signupbt" name = "Submit">
