--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
 			<div class=j>
 				<h3></h3>
 				<form method="post">
-					<input type="email" placeholder="Username" name="user">
+					<input type="email" placeholder="Username" name="user" autocomplete = "off">
 					<input type="password" placeholder="Password" name="user_pass">
 					<input type="submit" value="Login" name="submit">
 					<br>
