--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ margin:auto;
 }
 h1,h2,h3,h4,h5{
 font:lighter 25px "comic sans ms";
-color:white;
+color:black;
 padding:0;
 margin:0;
 }
@@ -31,7 +31,7 @@ float:right;
 }
 .nl{
 float:left;
-color:white;
+color:black;
 padding:25 20;
 }
 .nl:hover{
@@ -39,7 +39,7 @@ background:#1284f9;
 }
 a,img,button{
 transition:0.5s all ease;
-color:white;
+color:black;
 font-size:15;
 font-family:"comic sans ms";
 }
@@ -59,7 +59,7 @@ height:400;
 position:relative;
 background:rgba(0,0,0,0.5);
 font-size:15;
-color:white;
+color:black;
 }
 h2{
 font-size:55;
@@ -78,7 +78,7 @@ cursor:pointer;
 .a{
 width:200;
 height:265;
-background:white;
+background:black;
 box-shadow:2px 2px 5px #ccc;
 padding:20;
 margin:20 10 10;
@@ -92,7 +92,7 @@ margin:-20 -20 20;
 .b{
 width:820;
 height:265;
-background:white;
+background:black;
 box-shadow:2px 2px 5px #ccc;
 padding:20;
 margin:20 10 10;
@@ -101,7 +101,7 @@ float:left;
 .c{
 width:200;
 height:265;
-background:white;
+background:black;
 box-shadow:2px 2px 5px #ccc;
 padding:20;
 margin:20 10 10;
