--- a/templates/internaldetails.html
+++ b/templates/internaldetails.html
@@ -6,22 +6,20 @@
 </head>
 <body>
     <h1>Internals details</h1>
-    <form action="/submit" method="POST">
+    <form method="POST">
         
         <h2>Internals details</h2>
         <table>
             <tr>
                 <th>Question</th>
-                <th>Mark</th>
                 <th>Difficulty</th>
                 <th>CO Map</th>
             </tr>
             {% for i in range(1, 16) %}
                 <tr>
                     <td>Q{{ i }}</td>
-                    <td><input type="number" name="internaldetails-mark-{{ i }}" required></td>
-                    <td><input type="number" name="internaldetails-difficulty-{{ i }}" required></td>
-                    <td><input type="number" name="internaldetails-co-map-{{ i }}" required></td>
+                    <td><input type="number" name="d{{ i }}" min = "1" max = "3" required></td>
+                    <td><input type="number" name="co{{ i }}" min = "1" max = "5" required></td>
                 </tr>
             {% endfor %}
         </table>
