--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,7 @@
 			<div class=j>
 				<h3></h3>
 				<form method="post">
-					<input type="email" placeholder="Username" name="user">
+					<input type="email" placeholder="Username" name="user" autocomplete="off">
 					<input type="password" placeholder="Password" name="pass1">
 					<input type="password" placeholder="Confirm password" name="pass2">
 					<input type="submit" value="Signup" name="done">
