--- a/templates/student.html
+++ b/templates/student.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<p><br><br><br>To insert more student details:<br><br></p>
-			<form method = "post">
+			<form method = "post" autocomplete="off">
 				<div class = "TextBoxdiv">
 					<input type = "text" name = "uid" placeholder = "UID">
 				</div>
