--- a/templates/subject.html
+++ b/templates/subject.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<p><br><br><br>To insert more class details:<br><br></p>
-			<form method = "post">
+			<form method = "post" autocomplete = "off">
 				<div class = "TextBoxdiv">
 					<input type = "text" name = "name" placeholder = "Subject name">
 				</div>
