--- a/templates/index.html
+++ b/templates/index.html
@@ -59,12 +59,12 @@
 		</div>
 		<div class=c>
 			<h3>LOG IN</h3>
-			<input type=email placeholder=Username>
-			<input type=password placeholder=Password>
-			<a href="#">
-				<font color=blue>forget password???
-			</a></font>
-			<a href="/dash"><button>Log In</button></a>
+			<form method="post">
+				<input type="email" placeholder="Username" name="user" autocomplete = "off">
+				<input type="password" placeholder="Password" name="user_pass">
+				<button>login</button>
+				<br>
+			</form>
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
