--- a/templates/internaldetails.html
+++ b/templates/internaldetails.html
@@ -1,14 +1,29 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <title>Internals details</title>
-    <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='evaluation.css') }}">-->
+    <link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
-    <h1>Internals details</h1>
+    <div class=nav>
+        <div class=margin>
+            <h1>*NAME*</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/login" class=nl>Log In</a>
+                <a href="/signup" class=nl>Sign Up</a>
+                <a href="/contact" class=nl>Contact</a>
+            </div>
+        </div>
+    </div>
+    <div class=margin>
+
+    <br><br><br><br>
+
     <form method="POST">
-        
-        <h2>Internals details</h2>
+        <br><br>
+        <h3>Internals details</h5>
         <table>
             <tr>
                 <th>Question</th>
