--- a/templates/class.html
+++ b/templates/class.html
@@ -1,32 +1,48 @@
-<!DOCTYPE html>
+
 <html>
 	<head>
 		<title>Class</title>
 		<link rel = "stylesheet" type = "text/css" href = "/static/css/style.css">
 	</head>
 	<body>
-		{% for message in get_flashed_messages() %}
-		<h1>{{message}}</h1>
-		{% endfor %}
-		<div>
-			<h2>Currently stored class details are:</h2>
+		
+		<div class=nav>
+			<div class=margin>
+				<h1>*NAME*</h1>
+				<div class=link>
+					<a href="/index" class=nl>Home</a>
+					<a href="/about" class=nl>About</a>
+					<a href="/login" class=nl>Log In</a>
+					<a href="/signup" class=nl>Sign Up</a>
+					<a href="/contact" class=nl>Contact</a>
+				</div>
+			</div>
+		</div>
+		<div class=margin>
+
+		
+			<h5>Currently stored class details are:</h5>
 			{% for i in existing %}
 			<p>{{i}}</p>
 			{% endfor %}
-		</div>
-		<div>
-			<p><br><br><br>To insert more class details:<br><br></p>
+		
+		
+			<br><h5>To insert more class details:</h5>
+			<center>
+			<div class=j>
+				<h3></h3>
 			<form method = "post">
 				<div class = "TextBoxdiv">
 					<input type = "text" name = "name" placeholder = "Name in the format S1_AD" autocomplete="off">
 				</div>
-				<div>
-					<input type = "submit" value = "SUBMIT" class="signupbt" name = "Submit">
-				</div>
+				<button>Submit</button>
 			</form>
-		</div>
-		<div>
-			<p>Go back to <a href = "/dash">dashboard</a></p>
-		</div>
+		
+		
+		<centre>	<p>Go back to <a href = "/dash"><button>Dashboard</button></a></p></centre>
+		{% for message in get_flashed_messages() %}
+		<h6>{{message}}</h6>
+		{% endfor %}
+		</div></center>
 	</body>
 </html>
