Proper login, cannot access without login.

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,67 +26,29 @@
 		</div>
 	</div>
 	<div class=margin>
-		<h5>*about our project*</h5>
+		<h5>About Otocoat</h5>
 		<p style=width:32%;float:left;>
 			<font color=black>
-				text text text text text text text text text text text text text text text text text text text text text
-				text
-				text text text text text text text text text text text text text text text text text text text text text
-				text
-				text text text text text text text text text text texttext text texttext text texttext text texttext
-				text
-				text text text text text text text text text text text text text text text text text text text text text
-				tex
-				text text text text text text text text text text texttext text texttext text texttext text texttext
-				text
-				text text text text text text text text text text texttext text texttext text texttext text texttext
-				text
-				text text text text text text text text text text text text text text text text text text text text text
-				text
-				text text text text text text text text text text text text text text text text text text text text text
-				text
-				text text text text text text text text text text texttext text texttext text texttext text texttext
-				text
-				text text text text text text text text text text text text text text text text text text text text text
-				tex
-				text text text text text text text text text text texttext text texttext text texttext text texttext
-				text
-				text text text text text text text text text text texttext text texttext text texttext text texttext tex
+				Calculation of Course Outcome Attainment score is currently a cumbersome process, and our
+					project aims to make it a simple and quick one. Once a teacher logs in to the website using
+				their Rajagiri email id, they can choose the class and the evaluation method for which marks are
+			to be entered. The details of the students of that class will be made available along with the current
+		marks, if entered. Once the marks are input by the teacher, the course outcome attainment score is calculated
+	and displayed. Total course outcome calculation is also available to display.
 		</p>
 		<p style=width:31.5%;float:left;padding-left:30;>
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text tex
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text tex
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text texttext text texttext text texttext text texttext tex</p>
+			There are four evaluation methods which contribute to the CO score calculation, which are:<br>
+				Assignments<br>
+				Internal marks<br>
+				Endsem marks<br>
+				Course feedback<br>
+		</p>
 		<p style=width:31%;float:left;padding-left:30;>
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text tex
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text text text text text text text text text text text text
-			text
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text text text text text text text text text text text text tex
-			text text text text text text text text text text texttext text texttext text texttext text texttext text
-			text text text text text text text text text text texttext text texttext text texttext text texttext tex</p>
+		Total course outcome score is calculated using the following formula:<br>
+		CO score = 20% * indirect assessment + 80% * direct assessment<br>
+		where indirect assessment includes course feedback and direct feedback includes 
+		internal marks, assignment marks and endsem marks.	
+		</p>
 		</font>
 	</div>
 	<div class=f>
