--- a/templates/index.html
+++ b/templates/index.html
@@ -26,15 +26,13 @@
 		</div>
 	</div>
 	<div class=slider>
-		<img src="cover.jpeg">
+		<!--<img src="static/cover.jpg">-->
 		<div class=slidtxt>
 			<div class=margin>
-				<h2>*heading*</h2>
-				text text text text text text text text text text text text text text text text<br> text text text text
-				text
-				text text text text text text text text text text text<br> texttext text texttext text texttext text
-				texttext
-				text <br>
+				<h2>Otocoat</h2>
+					<p>Otocoat is an online tool for calculation of Course Outcome Attainment Score in a way that is easy,
+					quick and efficient.<br>This is available for use exclusively for Rajagiri School of Engineering
+					and Technology faculty.<br></p>
 				<a href="/about"><button>LEARN MORE</button>
 			</div>
 		</div>
@@ -43,17 +41,12 @@
 		<div class=b>
 			<h3>AN OVERVIEW OF OUR PROJECT</h3>
 			<font color=black>
-				<p> text text text text text text text text text text text text text text text text text text text text
-					text
-					text text text text text text text text text text text text text text text text text text text text
-					text text
-					text text text text text text text text text text text text text text text text text text text text
-					text text
-					text text text text text text text text text text text text text text text texttext text text text
-					text text
-					text text text text text text text text text text text text text text text text text text text text
-					text text
-					text text text text text text text text text text text text text text</p>
+				<p>Calculation of Course Outcome Attainment score is currently a cumbersome process, and our
+					project aims to make it a simple and quick one. Once a teacher logs in to the website using
+				their Rajagiri email id, they can choose the class and the evaluation method for which marks are
+			to be entered. The details of the students of that class will be made available along with the current
+		marks, if entered. Once the marks are input by the teacher, the course outcome attainment score is calculated
+	and displayed. Total course outcome calculation is also available to display. </p>
 			</font>
 			<a href="/about"><button>READ MORE</button></a>
 		</div>
@@ -71,32 +64,32 @@
 				<img src=02.jpg>
 			</div>
 			<center>
-				<h4>*HEADING*</h4>
-				Text text text
+				<h4>Otocoat</h4>
+				This is filler text.
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
 				<img src=3.jpg>
 			</div>
 			<center>
-				<h4>*HEADING*</h4>
-				Text text text
+				<h4>Otocoat</h4>
+				This is filler text.
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
 				<img src=4.jpg>
 			</div>
 			<center>
-				<h4>*HEADING*</h4>
-				Text text text
+				<h4>Otocoat</h4>
+				This is filler text.
 		</div>
 		<div class=e>
 			<div style=overflow:hidden;>
 				<img src=5.jpg>
 			</div>
 			<center>
-				<h4>*HEADING*</h4>
-				Text text text
+				<h4>Otocoat</h4>
+				This is filler text.
 		</div>
 	</div>
 	<div class=f>
