--- a/templates/internalmarks.html
+++ b/templates/internalmarks.html
@@ -15,6 +15,7 @@
                 <a href="/login" class=nl>Log In</a>
                 <a href="/signup" class=nl>Sign Up</a>
                 <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
             </div>
         </div>
     </div>
