--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
 	{% endfor %}
 	<div class=nav>
 		<div class=margin>
-			<h1>*NAME*</h1>
+			<h1>Otocoat</h1>
 			<div class=link>
 				<a href="/index" class=nl>Home</a>
 				<a href="/about" class=nl>About</a>
