--- a/templates/feedback1.html
+++ b/templates/feedback1.html
@@ -16,19 +16,39 @@
     {% endwith %}
     <form method="post">
         <label for="co1">CO1:</label>
-        <input type="number" id="co1" name="co1" min="1" max="3" required><br>
+        <select id="co1" name="co1" required><br>
+            <option value = "1">1</option>
+            <option value = "2">2</option>
+            <option value = "3">3</option>
+        </select>
         
         <label for="co2">CO2:</label>
-        <input type="number" id="co2" name="co2" min="1" max="3" required><br>
+        <select id="co2" name="co2" required><br>
+            <option value = "1">1</option>
+            <option value = "2">2</option>
+            <option value = "3">3</option>
+        </select>
         
         <label for="co3">CO3:</label>
-        <input type="number" id="co3" name="co3" min="1" max="3" required><br>
+        <select id="co3" name="co3" required><br>
+            <option value = "1">1</option>
+            <option value = "2">2</option>
+            <option value = "3">3</option>
+        </select>
         
         <label for="co4">CO4:</label>
-        <input type="number" id="co4" name="co4" min="1" max="3" required><br>
+        <select id="co4" name="co4" required><br>
+            <option value = "1">1</option>
+            <option value = "2">2</option>
+            <option value = "3">3</option>
+        </select>
         
         <label for="co5">CO5:</label>
-        <input type="number" id="co5" name="co5" min="1" max="3" required><br>
+        <select id="co5" name="co5" required><br>
+            <option value = "1">1</option>
+            <option value = "2">2</option>
+            <option value = "3">3</option>
+        </select>
         
         <input type="submit" value="Submit Feedback">
     </form>
