--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
 	
 	<div class=nav>
 		<div class=margin>
-			<h1>*NAME*</h1>
+			<h1>Otocoat</h1>
 			<div class=link>
 				<a href="/index" class=nl>Home</a>
 				<a href="/about" class=nl>About</a>
