--- a/templates/student.html
+++ b/templates/student.html
@@ -11,9 +11,8 @@
 				<div class=link>
 					<a href="/index" class=nl>Home</a>
 					<a href="/about" class=nl>About</a>
-					<a href="/login" class=nl>Log In</a>
-					<a href="/signup" class=nl>Sign Up</a>
 					<a href="/contact" class=nl>Contact</a>
+					<a href = "/logout" class = nl>Logout</a>
 				</div>
 			</div>
 		</div>
