--- a/templates/endsemmarks.html
+++ b/templates/endsemmarks.html
@@ -1,6 +1,7 @@
+
 <html>
 <head>
-    <title>Internal marks</title>
+    <title>Endsem marks</title>
     <link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
@@ -20,12 +21,12 @@
     </div>
     <div class=margin>
 
-    <h5>Internal marks</h5>
+    <h5>Endsem marks</h5>
     <form method="POST">
         <table>
             <tr>
 				<th>Student uid</th>
-                {% for i in range(1, 16) %}
+                {% for i in range(1, 21) %}
 				<th>Question {{i}}</th>
 				{% endfor %}
             </tr>
@@ -35,7 +36,7 @@
 					{% for j in range(1, 6) %}
                     <td><input type="number" name="{{i}}_q{{ j }}" min = "0" max = "3" step = "0.5"></td>
 					{% endfor %}
-					{% for j in range(6, 16) %}
+					{% for j in range(6, 21) %}
                     <td><input type="number" name="{{i}}_q{{ j }}" min = "0" max = "7" step = "0.5"></td>
 					{% endfor %}
                 </tr>
