Added admin dashboard.

--- a/templates/adash.html
+++ b/templates/adash.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>
-		MINI | Dashboard | Faculty
+		MINI | Dashboard | Admin
 	</title>
 	<link rel="stylesheet" href="/static/css/style.css">
 </head>
@@ -27,10 +27,11 @@
 		</div>
 	</div>
 	<div class=margin>
-		<h5>Welcome To Dashboard</h5>
+		<h5>Welcome To Admin Dashboard</h5>
 		<div class=k>
-			<li>Input Mark Details Here <a href="/marks"><button>Mark</button></a></li><br><br>
-			<li>View CO scores attained for subject here<a href = '/overall'><button>Co scores</button></a></li>		
+			<li>Input Class Details Here <a href="/class"><button>Class</button></a></li><br><br>
+			<li>Input Subject Details Here <a href="/subject"><button>Subject</button></a></li><br><br>
+			<li>Input Student Details Here <a href="/student"><button>Student</button></a></li><br><br>		
 		</div>
 </body>
 
