--- a/templates/dash.html
+++ b/templates/dash.html
@@ -30,7 +30,7 @@
 		<h5>Welcome To Dashboard</h5>
 		<div class=k>
 			<li>Input Mark Details Here <a href="/marks"><button>Mark</button></a></li><br><br>
-			<li>View CO scores attained for subject here<a href = '/overall'><button>Co scores</button></a></li>		
+			<li>View CO scores Here <a href = "/overall"><button>CO Scores</button></a></li><br><br>
 		</div>
 </body>
 
