--- a/templates/internalresults.html
+++ b/templates/internalresults.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<title>Internals results</title>
 </head>
@@ -16,3 +17,4 @@
 		<a href = "/dash">Go back to dashboard</a>
 	</div>
 </body>
+</html>
