Stylistic changes, nothing major

--- a/templates/endsemresults.html
+++ b/templates/endsemresults.html
@@ -3,6 +3,17 @@
 	<title>Endsem results</title>
 </head>
 <body>
+	<div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
 	<div>
 		{% for i in range(1, 6) %}
 			{% if colist[i - 1] == 0 %}
