--- a/templates/assignmentresults.html
+++ b/templates/assignmentresults.html
@@ -3,6 +3,17 @@
 	<title>Assignment results</title>
 </head>
 <body>
+	<div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
 	<div>
 		<p>Percentage of students who passed the threshold: {{percent}}</p>
 	</div>
