--- a/templates/internalresults.html
+++ b/templates/internalresults.html
@@ -2,8 +2,20 @@
 <html>
 <head>
 	<title>Internals results</title>
+	<link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+	<div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
 	<div>
 		{% for i in range(1, 6) %}
 			{% if colist[i - 1] == 0 %}
