--- a/templates/nooverall.html
+++ b/templates/nooverall.html
@@ -4,6 +4,17 @@
 	<title>Internals results</title>
 </head>
 <body>
+	<div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
 	<div>
 		<p>Marks haven't been entered for the following evaluation methods:</p>
 		<ul>
