A few basic changes

--- a/templates/subject.html
+++ b/templates/subject.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class = "TextBoxdiv">
 					<label for = "classes">Class: </label>
-					<select id = "classes" name = "classy">
+					<select id = "classes" name = "theclass">
 						{% for i in alist %}
 						<option value = "{{i}}">{{i}}</option>
 						{% endfor %}
