--- a/templates/class.html
+++ b/templates/class.html
@@ -8,7 +8,7 @@
 		
 		<div class=nav>
 			<div class=margin>
-				<h1>*NAME*</h1>
+				<h1>Class</h1>
 				<div class=link>
 					<a href="/index" class=nl>Home</a>
 					<a href="/about" class=nl>About</a>
