--- a/templates/nooverall.html
+++ b/templates/nooverall.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Internals results</title>
+	<link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
 	<div class=nav>
