--- a/templates/overall.html
+++ b/templates/overall.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Internals results</title>
+	<link rel = "stylesheet" type = "text/css" href = "/static/css/style.css">
 </head>
 <body>
 	<div class=nav>
