--- a/templates/assignmentmarks.html
+++ b/templates/assignmentmarks.html
@@ -1,11 +1,27 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <title>Assignment marks</title>
-    <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='evaluation.css') }}">-->
+    <link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
-    <h1>Assignment marks</h1>
+    <div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/login" class=nl>Log In</a>
+                <a href="/signup" class=nl>Sign Up</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
+    <div class=margin>
+       
+    <h5>Assignment marks</h5>
+    
     <form method="POST">
         <table>
             <tr>
