--- a/templates/endsemdetails.html
+++ b/templates/endsemdetails.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <title>End Sem</title>
     <link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
-    <h1>End Sem</h1>
+    
     <div class=nav>
         <div class=margin>
             <h1>Otocoat</h1>
@@ -18,8 +18,8 @@
         </div>
     </div>
     <form method="POST">
-        
-        <h2>End Sem</h2>
+        <div class=margin>
+        <h5>End Sem</h5>
         <table>
             <tr>
                 <th>Question</th>
