--- a/templates/internalresults.html
+++ b/templates/internalresults.html
@@ -1,8 +1,24 @@
-<!DOCTYPE html>
+<html>
 <head>
 	<title>Internals results</title>
+	<link rel = "stylesheet" type = "text/css" href = "/static/css/style2.css">
 </head>
 <body>
+	<div class=nav>
+        <div class=margin>
+            <h1>Otocoat</h1>
+            <div class=link>
+                <a href="/index" class=nl>Home</a>
+                <a href="/about" class=nl>About</a>
+                <a href="/login" class=nl>Log In</a>
+                <a href="/signup" class=nl>Sign Up</a>
+                <a href="/contact" class=nl>Contact</a>
+                <a href = "/logout" class = nl>Logout</a>
+            </div>
+        </div>
+    </div>
+    <div class=margin>
+		<br><br><br>
 	<div>
 		{% for i in range(1, 6) %}
 			{% if colist[i - 1] == 0 %}
@@ -13,6 +29,6 @@
 		{% endfor %}
 	</div>
 	<div>
-		<a href = "/dash">Go back to dashboard</a>
+		<a href = "/dash"><button> dashboard</button></a>
 	</div>
 </body>
